[package]
name = "quota-layer"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A quota layer for OpenDAL."
homepage = "https://ericg2.github.io/"
repository = "https://github.com/ericg2/quota-layer"
readme = "README.md"
categories = ["filesystem"]
keywords = ["vfs"]

[dependencies]
opendal = "0.57"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }